--- a/gb/ncid277_4.md
+++ b/gb/ncid277_4.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rywys229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rywys229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11698961.md#1" target="_blank">【翻墙必看】分析：中共走进死胡同 无法脱身</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11698961.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911062150242188-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 9:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699909.md#1" target="_blank">中移动前审查员披露中共监控全国用户内幕</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699909.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/cc-2-150x120.jpg" align ="left"></a>“在中国没有任何隐私，手机上的社交平台、电话、短信全部都在监控之下”，一名曾在中移动在线服务公司工作的职员说。他披露中共政府监控全国手机用户、封锁一切所谓的敏感信息的内幕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699988.md#1" target="_blank">川普女婿库什纳参与美中谈判 会晤崔天凯</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699988.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/GettyImages-1138923367-150x120.jpg" align ="left"></a>在美中贸易谈判陷入泥潭的时候，外媒报导美国总统川普（特朗普）的女婿贾里德·库什纳（Jared Kushner）加入了谈判，试图帮助华盛顿和北京达成初步协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:04 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699333.md#1" target="_blank">儿子结婚孙子满月均受贿 浙江女贪官获刑</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699333.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/zhuge-huiyan_1-1-150x120.jpg" align ="left"></a>中共浙江省衢州市人大常委会原副主任诸葛慧艳，是中共十九大以来浙江首个落马的女厅级官员。其被被判处有期徒刑9年。其持续20年在每年过年期间都理所当然地受贿。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 3:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699473.md#1" target="_blank">因应中共威胁 美军订造9艘最先进核潜艇</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699473.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1000w_q95-150x120.jpg" align ="left"></a>美国海军在周一（12月4日）签下史上最高金额的造舰合约，将以222亿美元的经费打造9艘最先进的维吉尼亚级（Virginia-class）核动力攻击潜艇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699422.md#1" target="_blank">湖北公安厅官被双开 曾迫害法轮功上千人次</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699422.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dong-guoxiang_1-150x120.jpg" align ="left"></a>中共湖北省公安厅前党委委员、湖北警官学院前党委书记董国祥日前被“双开”并移送司法。董国祥被指滥用职权，要求法院判处被告人缓刑、不追缴罚金，收受贿赂、贪污等。董国祥还曾担任湖北“610”头目、咸宁市政法委书记等，因参与迫害法轮功被海外组织追查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697900.md#1" target="_blank">意大利朝野齐炮轰 中共战狼式外交犯众怒</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697900.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9fee2aa30ffe50be6ead296325ec8f26-600x400-150x120.jpg" align ="left"></a>中共扩张全球的野心及对各国的渗透，已招致各国的围剿。进入2019年底，针对中共的事件接踵而至。最近，在多个事件中，中共“战狼式”外交惹怒西方各国，遭到反击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:28 PM							</td></tr>
@@ -28,16 +32,6 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697688.md#1" target="_blank">美大学生控告抖音海外版侵犯个资</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697688.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1BM18F-150x120.jpg" align ="left"></a>一名来自加利福尼亚州的大学生起诉社交媒体“字节跳动”（ByteDance Inc.）抖音海外版——TikTok。原因是该公司在使用她的视频创建针对性广告在线个人资料时，将自己的个人信息秘密转移到了中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697901.md#1" target="_blank">北约把目标从苏联转为中共 秘书长释因由</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697901.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186259372-150x120.jpg" align ="left"></a>周二（12月3日），北约国家元首和政府首脑在英国举行为期两天的北约峰会，这是首次把中共威胁列入了北约议题，各国将会讨论” 中共军事和安全“等方面议题，美国总统川普（特朗普）也在会上谈论“中共威胁”。北约为何把对付的目标转向了中共？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697547.md#1" target="_blank">台退役中校涉中共间谍 检调求刑3年8个月</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697547.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191203000200M-150x120.jpg" align ="left"></a>台南地检署侦办共谍案，查出台湾工党主席郑昭明，涉嫌引介儿子、前军备局退休中校郑智文为中共发展组织，并赠予礼金、旅游补贴及手表给陈姓中校，意图吸收提供台湾军情，要求日后中共若武力犯台，以“北平模式”不抵抗策略处理，检调依《国安法》起诉郑姓父子，并求处郑昭明3年，郑智文3年8个月。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697712.md#1" target="_blank">川普：美中协议无最后期限 更愿大选后签单</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697712.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/01-20180323-Trump-SamiraBouaou-8329-2-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周二（12月3日）在伦敦示意记者，与中方的贸易协议谈判没有最后期限，他宁可等到美国大选后再签协议。这番评论令外界对华盛顿和北京在几周内能够达成第一阶段协议的可能性产生怀疑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11696610.md#1" target="_blank">【翻墙必看】林郑为何让习近平震惊？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11696610.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010333492188-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.【独家】习近平震惊 林郑严重误判选情
-据接近中南海高层消息人士透露，香港区议会选举结果出炉，习近平感到震惊，建制派的几乎全军覆没，与特首林郑选前报告的“一定会赢”落差太大，中央一时拿不出政策，既定政策失算。
-
-2.贸易战下中国粮食危机 学者：恐爆政治动荡
-美中贸易战持续，中国可能出现比经济下行更棘手的粮.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11696960.md#1" target="_blank">财务迅速恶化 香港航空营运现危机</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11696960.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/6cab5d9587ecc1ad64bede18094da114-150x120.jpg" align ="left"></a>去年底已传出财务危机的香港航空（港航），12月2日收到港府的最后通牒。被要求在12月7日或之前资金及现金水平需符合规定，否则或撤销或暂时撤销其牌照。前政务司长唐英年急表态与港航割席。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 7:33 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697369.md#1" target="_blank">亲共人士在美驻港领事馆外抗议 引网民抨击</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-170261793-150x120.jpg" align ="left"></a>星期二（12月3日）中午，一群亲共人士在美国驻香港总领事馆外聚集，抗议美国总统川普（特朗普）签署《香港人权与民主法案》。与此同时，香港多区继续进行“反极权和你Lunch”活动，要求港府回应五大诉求。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 6:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699071.md#1" target="_blank">美众院通过维吾尔人权法 迪里夏提：带来希望</a><br></h3>美国众议院在周二 (3 日) 晚间以，407 比 1 的票数压倒性通过“维吾尔人权政策法案”。该法案被视为继《香港人权与民主法案》之后，美国国会对中共的又一次重击。中共不出意外地再次“坚决反对”，并扬言要报复。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/ncid277_4.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/ncid277_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/ncid277_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_4.htm">http://www.epochtimes.com/gb/ncid277_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
